# flight-tracker-cli

./: CMakeLists.txt  README.md
include/: database.h  flight.h  menu.h
src/: database.cpp  flight.cpp  main.cpp  menu.cpp
